# Chiv2AdminDashboard

./: .gitignore  README.md
C2ServerAPI/: DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_QUICK_REFERENCE.md  DATABASE_README.md  DATABASE_SETUP.md  DATABASE_SYSTEM_OVERVIEW.md  README.md  database_cli.py  database_config.json  gitignore_additions.txt  interface.py  pyproject.toml  versionmetadata.py
C2ServerAPI/core/: C2ServerAPIExample.py  autoupdater.py  database_auth.py  database_config.py  database_demo.py  database_manager.py  database_models.py  database_utils.py  guiServer.py  inputLib.py  wehbooks.py
C2ServerAPI/tests/: __init__.py  test_player_identity_history.py
