[tool.poetry]
name = "AdminDashBoard"
version = "4.5.2.0"
description = "A dashboard to simplify adminstrative tasks on a Chivalry 2 server."
authors = ["OVA"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
PyQt5 = "*"
pyperclip = "*"
pywin32 = "*"
"discord.py" = "*"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.0"
pyinstaller-versionfile = "^2.1.1"
pip-licenses = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
