[tool.poetry]
name = "AdminDashBoard"
version = "4.5.4"
description = "A dashboard to simplify adminstrative tasks on a Chivalry 2 server."
authors = ["OVA"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
PyQt5 = "*"
pyperclip = "*"
pywin32 = "*"
"discord.py" = "*"
sqlalchemy = "^2.0.0"
psycopg2-binary = {version = "^2.9.0", optional = true}
pymysql = {version = "^1.1.0", optional = true}

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.0"
pyinstaller-versionfile = "^2.1.1"
pip-licenses = "^4.3.2"

[tool.poetry.extras]
postgresql = ["psycopg2-binary"]
mysql = ["pymysql"]
all-databases = ["psycopg2-binary", "pymysql"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
